2017-07-24  Carl Hetherington  <cth@carlh.net>

	* Update ISDCF name when DCP frame rate changes (#1102).

 	* Updated zh_CN translation from 刘汉源.

2017-07-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.14 released.

2017-07-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.13 released.

2017-07-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.12 released.

2017-07-04  Carl Hetherington  <cth@carlh.net>

	* Tentative fix for incorrect colours with logarithmic DPX sources.

2017-07-02  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2017-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.11 released.

2017-06-14  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2017-06-08  Carl Hetherington  <cth@carlh.net>

	* Add size and audio/subtitle languages to cover sheet (#1081).

	* Updated de_DE translation from Carsten Kurz.

2017-06-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.10 released.

2017-05-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.9 released.

2017-05-31  Carl Hetherington  <cth@carlh.net>

	* Speed up generation of 3D DCPs from still images.

2017-05-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.8 released.

2017-05-26  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2017-05-24  Carl Hetherington  <cth@carlh.net>

	* Arrange DKDMs in folders in the UI (#1012).

	* Version 2.11.7 released.

2017-05-23  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.6 released.

2017-05-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.5 released.

2017-05-15  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated ru_RU translation from Igor Voytovich.

	* Updated nl_NL translation from Rob van Nieuwkerk.
