@@ -35,6 +35,7 @@ sources = """
           cinema_dialog.cc
           colour_conversion_editor.cc
           config_dialog.cc
+          config_move_dialog.cc
           confirm_kdm_email_dialog.cc
           content_colour_conversion_dialog.cc
           content_menu.cc
@@ -76,6 +77,7 @@ sources = """
           normal_job_view.cc
           playhead_to_timecode_dialog.cc
           playhead_to_frame_dialog.cc
+          question_dialog.cc
           repeat_dialog.cc
           report_problem_dialog.cc
           rename_template_dialog.cc
